# wEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  readme.md
3rdlibs/: CMakeLists.txt
engine/: CMakeLists.txt
engine/include/: pch.hpp  wen.hpp
engine/include/runtime/core/base/: macro.hpp  singleton.hpp
engine/include/runtime/core/log/: log_system.hpp  logger.hpp
engine/include/runtime/engine/: engine.hpp  global_context.hpp
engine/include/runtime/function/event/: event.hpp  event_system.hpp  key_codes.hpp  mouse_codes.hpp
engine/include/runtime/function/input/: input_system.hpp
engine/include/runtime/function/window/: window.hpp  window_system.hpp
engine/src/runtime/core/log/: log_system.cpp  logger.cpp
engine/src/runtime/engine/: engine.cpp  global_context.cpp
engine/src/runtime/function/event/: event.cpp  event_system.cpp
engine/src/runtime/function/input/: input_system.cpp
engine/src/runtime/function/window/: window.cpp  window_system.cpp
sandbox/example/: CMakeLists.txt
sandbox/example/src/: main.cpp
